feat: add favicon

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="hackhaftasi"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" href="./images/pausiber-logo.png" type="image/x-icon" />
 
     <title>hackhaftasi</title>
   </head>
